<resources>
    <string name="app_name" translatable="false">Extra Delicate</string>
    <string name="yandex_maps_API_key" translatable="false">09ee0a39-0ad1-490a-9ea8-8600c46b9ef8</string>
    <string name="productsNotAvailable">Нет достаточного количества товара, всего осталось</string>
    <string name="errorConnectedToServer">Ошибка соединения с сервером. Попробуйте позже</string>
    <string name="myAccount">Мой аккаунт</string>
    <string name="phoneNumber">Номер телефона</string>
    <string name="loginContinue">Продолжить</string>
    <string name="accountEnter">Войти</string>
    <string name="loginDescription">Мы отправим Вам смс код, чтобы подтвердить Ваш аккаунт. После авторизации Вам будут доступны все функции программы лояльности.</string>
    <string name="enterCorrectPhoneNumber">Введите корректный номер телефона</string>
    <string name="verificationDescription">Мы отправили Вам смс код, на указанный Вами номер телефона. Введите данный код в поле ввода ниже. Никому не сообщайте данный код.</string>
    <string name="codeIncorrect">Код неверен</string>
    <string name="enterCode">Введите код</string>
    <string name="userStatus">Аккаунт проверен</string>
    <string name="user">Пользователь</string>
    <string name="shop">Магазин</string>
    <string name="howSpendMoney">Как потратить бонусы?</string>
    <string name="supportChat">Чат с поддержкой</string>
    <string name="myOffers">Мои заказы</string>
    <string name="signOut">Выйти из аккаунта</string>
    <string name="notifications">Уведомления</string>
    <string name="changeName">Изменить имя</string>
    <string name="saveName">Сохранить</string>
    <string name="yourName">Имя</string>
    <string name="ccountVerified">Аккаунт проверен</string>
    <string name="serverError">Ошиба соединения с сервером, повторите попытку позже</string>
    <string name="dataUpdatedSuccessfully">Ваши данные успешно обновлены</string>
    <string name="product_discount">Скидка</string>
    <string name="product_specifications">Характеристики</string>
    <string name="product_modifier">Дополнения:</string>
    <string name="button_to_basket">В корзину</string>
    <string name="itemActivityMany">Много</string>
    <string name="itemActivityFew">Мало</string>
    <string name="productNewActivityAddedMulti">добавлены</string>
    <string name="productNewActivityAddedToBasket">в корзину</string>
    <string name="productNewActivityAddedOne">добавлен</string>
    <string name="productNewActivity">добавлены</string>
    <string name="productNewActivityPC">шт.</string>
    <string name="productActivityAddToCart">Добавить в корзину</string>
    <string name="itemActivityPictures">Фотографии</string>
    <string name="AddressPickupChooseActivitySelectPickupPoint">Выберите пункт выдачи</string>
    <string name="choose_address">Выберите адрес</string>
    <string name="mainActivityChooseAddressOrProvideLocationPermission">Выберите адрес или разрешите приложению доступ к данным о местоположении устройства.</string>
    <string name="mainActivityYes">Да</string>
    <string name="mainActivityOk">Ok</string>
    <string name="mainActivityAttention">Внимание!</string>
    <string name="mainActivityCategories">Категории</string>
    <string name="mainActivityNoGPS">Нет доступа к данным о местоположении</string>
    <string name="mainActivityNews">Новости</string>
    <string name="mainActivityRequestPermission">Для корректной работы разрешите приложению доступ к данным о местоположении устройства. </string>
    <string-array name="sorts">
        <item>без сортировки</item>
        <item>по убыванию цены</item>
        <item>по возрастанию цены</item>
        <item>по дате: сначала новые</item>
        <item>по дате: сначала старые</item>
    </string-array>
    <string name="product_search">Поиск товаров</string>
    <string name="product_search_hint">Поиск…</string>
    <string name="newsActivityShare">Поделиться</string>
    <string name="loaderActivityUpdateNetworkConnection">Включить</string>
    <string name="loaderActivityNoNetworkConnection">Нет подключения к интернету</string>
    <string name="chatActivityTitle">Чат</string>
    <string name="chatActivityDetails">Подробности</string>
    <string name="chatActivityOffline">Офлайн</string>
    <string name="chatActivityOnline">Онлайн</string>
    <string name="chatActivitySaveImage">Сохранить</string>
    <string name="chatActivitySavedImage">Изображение сохранено</string>
    <string name="chatActivityYourMessage">Ваше сообщение</string>
    <string name="chatActivityRequestStoragePermission">Для отправки изображения разрешите приложению доступ к галереи. </string>
    <string name="chatActivityRequestStoragePermissionForSaveImages">Для сохранения изображения разрешите приложению доступ к файлам на устройстве. </string>
    <string name="chatActivityRequestCameraPermission">Для отправки фотографии разрешите приложению доступ к камере. </string>
    <string name="pickImageBottomSheetPictures">Фотографии</string>
    <string name="pickImageBottomSheetSend">Отправить</string>
    <string name="clean_basket">Очистить</string>
    <string name="basketActivityWorkingTime"> Магазин в настоящее время закрыт.\nВремя работы:</string>
    <string name="basketActivityCutlery">Приборы</string>
    <string name="basketActivityTotal">Итог</string>
    <string name="basketActivitySelectAddress">Выберите адрес</string>
    <string name="delivery_time">мин</string>
    <string name="basket_delivery">Доставка</string>
    <string name="basket_checkout">Оформить</string>
    <string name="basket_pickup">Самовывоз</string>
    <string name="basketActivityAddress">Адрес:</string>
    <string name="basketActivityAddressPickup">Адрес самовывоза: </string>
    <string name="basketActivityProductIsOver">Нет достаточного количества товара, всего осталось</string>
    <string name="basket_receiving">Получение</string>
    <string name="basket_yelm_delivery">Yelm\nДоставка</string>
    <string name="basketActivityPC">шт.</string>
    <string name="basketActivityDeliveryNotAvailable">Доставка по этому адресу недоступна</string>
    <string name="basketActivityOrderMinPrice">Минимальная сумма заказа, исключая доставку, не менее -  </string>
    <string name="basketActivityNotAvailbleAddress">нет доступных адресов</string>
    <string name="basketActivityFreeDelivery1">Закажите ещё на</string>
    <string name="basketActivityFreeDelivery2">для бесплатной доставки</string>
    <string name="ordering">Оформление</string>
    <string name="promocode">Промокод</string>
    <string name="orderActivityTotal">Итого</string>
    <string name="appartament">Квартира</string>
    <string name="recipient">Номер телефона</string>
    <string name="inYourOrder">Ваш заказ</string>
    <string name="orderActivityEnterPromoCode">Введите промокод</string>
    <string name="inYourOrderProductsPC">шт.</string>
    <string name="inYourOrderProductsCount">Товаров:</string>
    <string name="orderDiscount">Скидка по промокоду</string>
    <string name="orderDiscountDelivery">Скидка на доставку</string>
    <string name="orderDiscountDeliveryAlreadyFree">доставка уже бесплатная</string>
    <string name="cardPayment">Оплата картой</string>
    <string name="paymentType">Способ оплаты</string>
    <string name="orderActivityEnterFloor">Укажите этаж</string>
    <string name="orderActivityEnterEntrance">Укажите подъезд</string>
    <string name="orderActivityEnterFlat">Укажите квартиру</string>
    <string name="orderActivityEnterCorrectPhone">Укажите контактный телефон</string>
    <string name="paymentCardActivityOffer">Нажимая кнопку "Оплатить", Вы\n соглашаетесь с офертой</string>
    <string name="orderByIDActivityOrderPrice">Сумма заказа:</string>
    <string name="orderByIDActivityOrderData">Дата создания:</string>
    <string name="orderByIDActivityOrderAddress">Адрес:</string>
    <string name="orderByIDActivityDelivery">Доставка:</string>
    <string name="profile_subscription_action">Действие подписки:</string>
    <string name="profile_control">Управление</string>
    <string name="profile_days">дней</string>
    <string name="profile_day1">день</string>
    <string name="profile_day2">дня</string>
    <string name="profile_settings">Настройки</string>
    <string name="profile_statistics">Статистика</string>
    <string name="profile_push" translatable="false">PUSH</string>
    <string name="login_enter">Войти</string>
    <string name="login_enter_phone_number">Введите номер телефона</string>
    <string name="login_phone_number">Номер телефона</string>
    <string name="login_sms_code">Код из SMS</string>
    <string name="login_send">Отправить</string>
    <string name="login_code">Ваш код</string>
    <string name="login_repeat_code">Повторить отправку SMS</string>
    <string name="push_notifications">Уведомления</string>
    <string name="push_heading">Заголовок:</string>
    <string name="push_heading_hint">Что-то новое</string>
    <string name="push_notification_text">Текст уведомления:</string>
    <string name="push_description_hint">Описание</string>
    <string name="push_send_button">Отправить</string>
    <string name="push_notifications_for_app">Push уведомления для Вашего приложения</string>
    <string name="push_notifications_description">Вы можете отправить push уведомления на все устройства</string>
    <string name="myAddresses">Мои адреса</string>
    <string name="addressesDone">Готово</string>
    <string name="addNewAddress">Добавить новый</string>
    <string name="setPickup">Самовывоз</string>
    <string name="youDontHaveAddressesYet">У Вас еще нет адресов</string>
    <string name="chooseAddressesButton">Готово</string>
    <string name="chooseAddressesTitle">Выберите адрес</string>
    <string name="waitForGeolocationetermination">Дождитесь определения геолокации</string>
    <string name="addressChooseActivityRequestPermission">Для получения вашей геопозиции предоставьте приложению доступ к данным о местоположении устройства. </string>
    <string name="order_is_accepted">Заказ принят.</string>
    <string name="order_is_accepted_by_card">Оплата Картой прошла успешно. Заказ принят.</string>
    <string name="order_is_accepted_by_google_pay">Оплата с Google Pay прошла успешно. Заказ принят.</string>
    <string name="settings">Настройки</string>
    <string name="contact">Связаться</string>
    <string name="notify">Уведомления</string>
    <string name="my_personal_data">Мои личные данные</string>
    <string name="account">Аккаунт</string>
    <string name="article">Статьи</string>
    <string name="cash_back">Cashback</string>
    <string name="cash_back_description">"Это Ваш баланс, Вы можете потратить кешбэк на покупки в этом приложении. Баллы накапливатся за счет Ваших покупок.</string>
    <string name="balance">Баланс</string>
    <string name="news">Новости</string>
    <string name="main">Главная</string>
    <string name="catalog">Каталог</string>
    <string name="stock">Каталог</string>
    <string name="goods">Товары</string>
    <string name="basket">Корзина</string>
    <string name="history">История</string>
    <string name="delete_all">Удалить все</string>
    <string name="checkout">Оформить заказ</string>
    <string name="min_order_price">Минимальная сумма заказа -</string>
    <string name="cart_is_epty">Корзина пуста</string>
    <string name="empty_basket">Тут пусто :c\nДля поиска и выбора нужных Вам товаров перейдите в каталог</string>
    <string name="clarify_location">уточняем...</string>
    <string name="clarify_shops">уточняем Ваше место положение...</string>
    <string name="where_deliver">Куда доставляем?</string>
    <string name="select_location">Выбрать локацию</string>
    <string name="details_have_been_updated">Ваши данные обновлены.</string>
    <string name="order">Заказ</string>
    <string name="pickup_address">Адрес самовывоза</string>
    <string name="contentDescriptionBack">Назад</string>
</resources>