<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    android:clickable="true"
    android:focusable="true"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="36dp"
        android:layout_height="36dp"

        android:background="@drawable/circle_button_selector"
        android:contentDescription="@string/contentDescriptionBack"
        android:padding="6dp"

        android:scaleType="fitCenter"
        app:layout_collapseMode="pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_24" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:singleLine="true"
        android:text="@string/myAccount"
        android:textColor="@color/colorText"
        android:textSize="22sp"
        android:textStyle="bold"
        android:theme="@style/ProDisplayTextStyle"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="@+id/back" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:singleLine="true"
        android:text="@string/myAccount"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:textStyle="bold"

        android:theme="@style/ProDisplayTextStyle"
        app:layout_constraintBottom_toTopOf="@+id/userStatus"
        app:layout_constraintStart_toEndOf="@+id/smile"
        app:layout_constraintTop_toTopOf="@+id/smile" />

    <TextView
        android:id="@+id/userStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:singleLine="true"
        android:textColor="@color/colorTextGray"
        android:textSize="14sp"
        android:theme="@style/ProDisplayTextStyle"
        app:layout_constraintBottom_toBottomOf="@+id/smile"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:text="status" />

    <ImageView
        android:id="@+id/smile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/back_emoji"
        android:padding="10dp"
        android:rotation="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back"
        app:srcCompat="@drawable/ic_emoji" />

    <ImageView
        android:id="@+id/edit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/back_emoji"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/smile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/smile"
        app:srcCompat="@drawable/ic_edit" />

    <View
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/gradient_user_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smile" />

    <TextView
        android:id="@+id/bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"

        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:textStyle="bold"

        android:theme="@style/ProDisplayTextStyle"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toTopOf="@+id/card"
        tools:text="100 p" />

    <ImageView
        android:id="@+id/qr"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/back_emoji"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/card"
        app:layout_constraintEnd_toEndOf="@+id/card"
        app:srcCompat="@drawable/ic_qr" />

    <TextView
        android:id="@+id/shop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/shop"

        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:textStyle="bold"

        android:theme="@style/ProDisplayTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card" />

    <TextView
        android:id="@+id/howSpendMoney"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"


        android:text="@string/howSpendMoney"
        android:textColor="@color/colorTextGray"
        android:textSize="16sp"
        android:textStyle="bold"
        android:theme="@style/ProDisplayTextStyle"
        app:drawableEndCompat="@drawable/ic_back_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop" />

    <TextView
        android:id="@+id/supportChat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"


        android:layout_marginTop="16dp"
        android:text="@string/supportChat"
        android:textColor="@color/colorTextGray"
        android:textSize="16sp"
        android:textStyle="bold"
        android:theme="@style/ProDisplayTextStyle"
        app:drawableEndCompat="@drawable/ic_back_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howSpendMoney" />

    <TextView
        android:id="@+id/myOffers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"


        android:layout_marginTop="16dp"
        android:text="@string/myOffers"
        android:textColor="@color/colorTextGray"
        android:textSize="16sp"
        android:textStyle="bold"
        android:theme="@style/ProDisplayTextStyle"
        app:drawableEndCompat="@drawable/ic_back_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportChat" />


    <TextView
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:text="@string/settings"
        android:textColor="@color/colorText"
        android:textSize="20sp"

        android:textStyle="bold"
        android:theme="@style/ProDisplayTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myOffers" />

    <Switch
        android:id="@+id/notificationSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sf_prodisplay_regular"
        android:text="@string/notifications"
        android:textColor="@color/colorTextGray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <TextView
        android:id="@+id/signOut"
        style="@style/ProDisplayTextStyle"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/main_button_selector"
        android:gravity="center"
        android:paddingBottom="2dp"
        android:text="@string/signOut"
        android:textColor="@color/whiteColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationSwitch" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signOut" />

</androidx.constraintlayout.widget.ConstraintLayout>